Update 'gosl7cll1-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-cf964fce81.7v0q.p3.openshiftapps.com/rhtap/rhtap-qe:eb901114f552afbb283cd826260055de09018a2b@sha256:8a39276d0e1c3c4b7e537300274d6adadac56d6aad98c9a3eff343a50256283f

--- a/components/gosl7cll1-go/overlays/development/deployment-patch.yaml
+++ b/components/gosl7cll1-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gosl7cll1-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-cf964fce81.7v0q.p3.openshiftapps.com/rhtap/rhtap-qe:eb901114f552afbb283cd826260055de09018a2b@sha256:8a39276d0e1c3c4b7e537300274d6adadac56d6aad98c9a3eff343a50256283f
+          name: container-image
